fix z-index on resume-header

--- a/style.css
+++ b/style.css
@@ -233,7 +233,34 @@ li {
 }
 
 .resume h2, p {
- 
   align-self: center;
   align
 }
+
+.resume-header {
+  width: 420px;
+  margin: auto;
+}
+.resume p {
+  border: 2px solid white;
+  width: 97px;
+  padding: 10px;
+  border-radius: 10px
+  color: white;
+  margin: auto
+}
+
+.resume-header h2, p {
+  z-index: 2;
+}
+
+.resume-overlay {
+  width: 100%;
+  height: 394px;
+  background: #000;
+  opacity: 0.3;
+  position: absolute;
+}
+
+
+
